ARC: Fix text input focus when an ARC window is moved across displays.

BUG=770598
TEST=Manually

Change-Id: I8c0ce0d0ac9540ebe8aa9acf4f3038d06ec16f03