components/arc/ime/arc_ime_service_unittest.cc
@@ -100,7 +100,8 @@ class FakeInputMethod : public ui::DummyInputMethod {
 // not depending on the full setup of Exo and Ash.
 class FakeArcWindowDelegate : public ArcImeService::ArcWindowDelegate {
  public:
-  FakeArcWindowDelegate() : next_id_(0) {}
+  explicit FakeArcWindowDelegate(ui::InputMethod* input_method)
+      : next_id_(0), test_input_method_(input_method) {}
 
   bool IsArcWindow(const aura::Window* window) const override {
     return arc_window_id_.count(window->id());
@@ -108,6 +109,11 @@ class FakeArcWindowDelegate : public ArcImeService::ArcWindowDelegate {
 
   void RegisterFocusObserver() override {}
   void UnregisterFocusObserver() override {}
+
+  ui::InputMethod* GetInputMethodForWindow(
+      aura::Window* window) const override {
+    return window ? test_input_method_ : nullptr;
+  }
 
   std::unique_ptr<aura::Window> CreateFakeArcWindow() {
     const int id = next_id_++;
@@ -126,6 +132,7 @@ class FakeArcWindowDelegate : public ArcImeService::ArcWindowDelegate {
   aura::test::TestWindowDelegate dummy_delegate_;
   int next_id_;
   std::set<int> arc_window_id_;
+  ui::InputMethod* test_input_method_;
 };
 
 }  // namespace
@@ -152,9 +159,8 @@ class ArcImeServiceTest : public testing::Test {
     instance_->SetImeBridgeForTesting(base::WrapUnique(fake_arc_ime_bridge_));
 
     fake_input_method_ = std::make_unique<FakeInputMethod>();
-    instance_->SetInputMethodForTesting(fake_input_method_.get());
 
-    fake_window_delegate_ = new FakeArcWindowDelegate();
+    fake_window_delegate_ = new FakeArcWindowDelegate(fake_input_method_.get());
     instance_->SetArcWindowDelegateForTesting(
         base::WrapUnique(fake_window_delegate_));
     arc_win_ = fake_window_delegate_->CreateFakeArcWindow();
@@ -264,6 +270,26 @@ TEST_F(ArcImeServiceTest, WindowFocusTracking) {
   instance_->OnWindowFocused(nullptr, arc_win_.get());
   EXPECT_EQ(nullptr, fake_input_method_->GetTextInputClient());
   EXPECT_EQ(2, fake_input_method_->count_set_focused_text_input_client());
+}
+
+TEST_F(ArcImeServiceTest, RootWindowChange) {
+  std::unique_ptr<aura::Window> dummy_root =
+      fake_window_delegate_->CreateFakeNonArcWindow();
+
+  instance_->OnWindowFocused(arc_win_.get(), nullptr);
+  EXPECT_EQ(instance_.get(), fake_input_method_->GetTextInputClient());
+
+  // Moving to another root window with that shares the same input method.
+  // ArcImeService should keep attached to the IME.
+  instance_->OnWindowRemovingFromRootWindow(arc_win_.get(), dummy_root.get());
+  EXPECT_EQ(instance_.get(), fake_input_method_->GetTextInputClient());
+
+  // Removed from a root window. It should be detached.
+  instance_->OnWindowRemovingFromRootWindow(arc_win_.get(), nullptr);
+  EXPECT_NE(instance_.get(), fake_input_method_->GetTextInputClient());
+
+  // Unfocusing afterwards should not cause any trouble like crashing.
+  instance_->OnWindowFocused(nullptr, arc_win_.get());
 }
 
 TEST_F(ArcImeServiceTest, GetTextFromRange) {
